<resources>
    <string name="app_name">Thread Board</string>
    <string name="save">Save</string>
    <string name="choose_a_new_thread_title">Choose a new thread title</string>
    <string name="write_an_initial_post">Write an initial post</string>
    <string name="start_new_thread">Start a New Thread</string>
    <string name="author">By: %1$s </string>
    <string name="reply">Reply </string>
    <string name="author_name">Author name</string>
    <string name="write_a_reply">Write a reply</string>
</resources>
