<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thread.NewThreadActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/thread_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/choose_a_new_thread_title"
        android:inputType="text"
        android:autofillHints="title" tools:targetApi="o"/>

    <EditText
        android:id="@+id/thread_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/write_an_initial_post"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:lines="8"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:autofillHints="comment"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/thread_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/author_name"
        android:inputType="text"
        android:autofillHints="author"
        tools:targetApi="o"/>

    <Button android:id="@+id/save_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00897B"
        android:onClick="saveThread"
        android:hint="@string/save"/>

    <TextView
        android:id="@+id/error_message"
        android:visibility="invisible"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#B00020"
        />

</LinearLayout>