<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/comment_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/write_a_reply"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:lines="8"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:autofillHints="comment"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/comment_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/author_name"
        android:inputType="text"
        android:autofillHints="author"
        tools:targetApi="o"/>

    <Button android:id="@+id/save_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00897B"
        android:hint="@string/save"/>

    <TextView
        android:id="@+id/error_message"
        android:visibility="invisible"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#B00020"
        />

</LinearLayout>